# uv-scraper

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-prod.yml  deploy.yml
